<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="no_repo_selected">No repository selected</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="see_detail">See detail</string>

    <string name="file_name">File Name:</string>
    <string name="load_app_download">LoadApp - Current repository by Udacity</string>
    <string name="glide">Glide</string>
    <string name="load_app">LoadApp</string>
    <string name="retrofit">Retrofit</string>
    <string name="download">Download</string>
    <string name="status">Status</string>
    <string name="status_success">Success</string>
    <string name="status_fail">Fail</string>
    <string name="back_to_previous">Go to main screen</string>
    <string name="open_detail">Open detail screen</string>

</resources>
