<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail"
    app:layoutDescription="@xml/detail_scene">

    <TextView
        android:id="@+id/tvFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFileNameContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvFileName"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/load_app_download" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/status"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tvFileName"
        app:layout_constraintTop_toBottomOf="@id/tvFileNameContent" />

    <TextView
        android:id="@+id/tvStatusContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvFileNameContent"
        app:layout_constraintTop_toTopOf="@id/tvStatus"
        tools:text="@string/status_success"/>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:padding="4dp"
        android:layout_height="wrap_content"
        android:text="@string/back_to_previous"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorPrimaryDark"/>

</androidx.constraintlayout.motion.widget.MotionLayout>