<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorPrimaryDark"
            android:paddingVertical="8dp"
            android:src="@drawable/ic_assistant_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="20dp"
            app:layout_constraintBottom_toTopOf="@id/custom_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_icon">

            <RadioButton
                android:id="@+id/rbGlide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/glide"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbLoadApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/load_app"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbRetrofit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/retrofit"
                android:textSize="20sp" />
        </RadioGroup>

        <com.udacity.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:activeBackgroundColor="@color/colorPrimaryDark"
            app:activeTitle="@string/button_loading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:loadingColor="@color/colorAccent"
            app:standardBackgroundColor="@color/colorPrimary"
            app:standardTitle="@string/download"
            app:textColor="@color/white"
            app:textSize="@dimen/default_text_size" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

